# aggiornamento

./: .gitignore  CMakeLists.txt  README.md  gen-unix64.sh  gen-win64.bat  make-unix64.sh  make-win.bat
00-helloworld/: CMakeLists.txt
00-helloworld/src/: main.cc
01-single-buffer/: CMakeLists.txt
01-single-buffer/alice/: alice.cc
01-single-buffer/bob/: bob.cc
01-single-buffer/master/: main.cc
01-single-buffer/shared/container/: trunk.h
01-single-buffer/shared/src/: single-buffer.cc  single-buffer.h  trunk.cc
01-thread/: CMakeLists.txt
01-thread/alice/: alice.cc
01-thread/master/: main.cc
02-single-buffer/: CMakeLists.txt
02-single-buffer/alice/: alice.cc
02-single-buffer/bob/: bob.cc
02-single-buffer/master/: main.cc
02-single-buffer/shared/container/: airlock.h  trunk.h
02-single-buffer/shared/src/: airlock.cc  trunk.cc
03-double-buffer/: CMakeLists.txt
03-double-buffer/alice/: alice.cc
03-double-buffer/bob/: bob.cc
03-double-buffer/master/: main.cc
03-double-buffer/shared/container/: double-buffer.h
03-double-buffer/shared/src/: double-buffer.cc
04-fifo/: CMakeLists.txt
04-fifo/alice/: alice.cc
04-fifo/bob/: bob.cc
04-fifo/master/: main.cc
04-fifo/shared/container/: fifo.h  message-queue.h
04-fifo/shared/src/: fifo.cc  message-queue.cc
05-most-recent-out/: CMakeLists.txt
05-most-recent-out/alice/: alice.cc
05-most-recent-out/bob/: bob.cc
05-most-recent-out/master/: main.cc
05-most-recent-out/shared/container/: mro.h
05-most-recent-out/shared/src/: mro.cc
06-write-once-read-many/: CMakeLists.txt
06-write-once-read-many/alice/: alice.cc
06-write-once-read-many/bob/: bob.cc
06-write-once-read-many/master/: main.cc
06-write-once-read-many/shared/container/: worm.h
06-write-once-read-many/shared/src/: worm.cc
07-lock-free-queue/: CMakeLists.txt
07-lock-free-queue/src/: main.cc
agm/: CMakeLists.txt
agm/inc/aggiornamento/: aggiornamento.h  container.h  log.h  master.h  nonblocking_input.h  semaphore.h  string.h  thread.h  thread2.h
agm/inc/aggiornamento/platform/: unix.h  windows.h
agm/src/: aggiornamento.cc  container.cc  log.cc  master.cc  nonblocking_input.cc  semaphore.cc  string.cc  thread.cc  thread2.cc
amlib/: CMakeLists.txt
amlib/inc/amlib/: amlib.h
amlib/inc/amlib/platform/: unix.h  windows.h
cmake/: unix64.sh  win64.bat
cmake/platform/: unix64.txt  win64.txt
cmake/scripts/: preamble.txt  source_glob.txt
